# HW_SQL

./: alter.py  connect.py  create_tables.py  drop_tables.py  insert.py  main.py  pyproject.toml  select.py  test.db  truncate.py
